--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
+
+
 {
     "name": "yiisoft/yii2-app-advanced",
-    "description": "Yii 2 Advanced Project Template",
+    "description": "Yii Advanced Project Template",
     "keywords": ["yii2", "framework", "advanced", "project template"],
     "homepage": "http://www.yiiframework.com/",
     "type": "project",
